--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "@platforms" : [ "android", "iPhone", "iPad" ],
     "id" : "H59014AA1", /*应用的标识*/
-    "name" : "GoodPraiseH5", /*应用名称，程序桌面图标名称*/
+    "name" : "粉丝帮", /*应用名称，程序桌面图标名称*/
     "version" : {
         "name" : "1.0", /*应用版本名称*/
         "code" : 1
@@ -10,7 +10,7 @@
     "icons" : {
         "72" : "icon.png"
     },
-    "launch_path" : "main.html", /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path" : "login.html", /*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
     "developer" : {
         "name" : "", /*开发者名称*/
         "email" : "", /*开发者邮箱地址*/
@@ -105,7 +105,8 @@
     "plus" : {
         "splashscreen" : {
             "autoclose" : true, /*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
-            "waiting" : true /*是否在程序启动界面显示等待雪花，true表示显示，false表示不显示。*/
+            "waiting" : true, /*是否在程序启动界面显示等待雪花，true表示显示，false表示不显示。*/
+            "delay" : 2000
         },
         "popGesture" : "close", /*设置应用默认侧滑返回关闭Webview窗口，"none"为无侧滑返回功能，"hide"为侧滑隐藏Webview窗口。参考http://ask.dcloud.net.cn/article/102*/
         "runmode" : "normal", /*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
@@ -165,7 +166,15 @@
                         "spotlight-retina7" : "", /*iPhone4S/5/6 Spotlight搜索程序图标，分辨率：80x80*/
                         "settings-normal" : "", /*iPhone4设置页面程序图标，分辨率：29x29*/
                         "settings-retina" : "", /*iPhone4S/5/6设置页面程序图标，分辨率：58x58*/
-                        "settings-retina8" : "" /*iPhone6Plus设置页面程序图标，分辨率：87x87*/
+                        "settings-retina8" : "", /*iPhone6Plus设置页面程序图标，分辨率：87x87*/
+                        "app@2x" : "unpackage/res/icons/120x120.png",
+                        "app@3x" : "unpackage/res/icons/180x180.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "notification@3x" : "unpackage/res/icons/60x60.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "settings@3x" : "unpackage/res/icons/87x87.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png",
+                        "spotlight@3x" : "unpackage/res/icons/120x120.png"
                     },
                     "ipad" : {
                         "normal" : "", /*iPad普通屏幕程序图标，分辨率：72x72*/
@@ -177,44 +186,69 @@
                         "spotlight-normal7" : "", /*iPad iOS7 Spotlight搜索程序图标，分辨率：40x40*/
                         "spotlight-retina7" : "", /*iPad iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
                         "settings-normal" : "", /*iPad设置页面程序图标，分辨率：29x29*/
-                        "settings-retina" : "" /*iPad高分屏设置页面程序图标，分辨率：58x58*/
-                    }
+                        "settings-retina" : "", /*iPad高分屏设置页面程序图标，分辨率：58x58*/
+                        "app" : "unpackage/res/icons/76x76.png",
+                        "app@2x" : "unpackage/res/icons/152x152.png",
+                        "notification" : "unpackage/res/icons/20x20.png",
+                        "notification@2x" : "unpackage/res/icons/40x40.png",
+                        "proapp@2x" : "unpackage/res/icons/167x167.png",
+                        "settings" : "unpackage/res/icons/29x29.png",
+                        "settings@2x" : "unpackage/res/icons/58x58.png",
+                        "spotlight" : "unpackage/res/icons/40x40.png",
+                        "spotlight@2x" : "unpackage/res/icons/80x80.png"
+                    },
+                    "appstore" : "unpackage/res/icons/1024x1024.png"
                 },
                 "android" : {
                     "mdpi" : "", /*普通屏程序图标，分辨率：48x48*/
                     "ldpi" : "", /*大屏程序图标，分辨率：48x48*/
-                    "hdpi" : "", /*高分屏程序图标，分辨率：72x72*/
-                    "xhdpi" : "", /*720P高分屏程序图标，分辨率：96x96*/
-                    "xxhdpi" : "" /*1080P 高分屏程序图标，分辨率：144x144*/
+                    "hdpi" : "unpackage/res/icons/72x72.png", /*高分屏程序图标，分辨率：72x72*/
+                    "xhdpi" : "unpackage/res/icons/96x96.png", /*720P高分屏程序图标，分辨率：96x96*/
+                    "xxhdpi" : "unpackage/res/icons/144x144.png", /*1080P 高分屏程序图标，分辨率：144x144*/
+                    "xxxhdpi" : "unpackage/res/icons/192x192.png"
                 }
             },
             "splashscreen" : {
                 "ios" : {
                     "iphone" : {
                         "default" : "", /*iPhone3启动图片选，分辨率：320x480*/
-                        "retina35" : "", /*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
-                        "retina40" : "", /*4.0 英寸设备(iPhone5/iPhone5s)启动图片，分辨率：640x1136*/
-                        "retina47" : "", /*4.7 英寸设备(iPhone6)启动图片，分辨率：750x1334*/
-                        "retina55" : "", /*5.5 英寸设备(iPhone6 Plus)启动图片，分辨率：1242x2208*/
-                        "retina55l" : "" /*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
+                        "retina35" : "/Users/dev/Desktop/粉丝帮启屏页/640-960.png", /*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
+                        "retina40" : "/Users/dev/Desktop/粉丝帮启屏页/640-1136.png", /*4.0 英寸设备(iPhone5/iPhone5s)启动图片，分辨率：640x1136*/
+                        "retina47" : "/Users/dev/Desktop/粉丝帮启屏页/750-1334.png", /*4.7 英寸设备(iPhone6)启动图片，分辨率：750x1334*/
+                        "retina55" : "/Users/dev/Desktop/粉丝帮启屏页/1242-2208.png", /*5.5 英寸设备(iPhone6 Plus)启动图片，分辨率：1242x2208*/
+                        "retina55l" : "/Users/dev/Desktop/粉丝帮启屏页/2208-1242.png", /*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
+                        "portrait-896h@3x" : "/Users/dev/Desktop/粉丝帮启屏页/1242-2688.png",
+                        "landscape-896h@3x" : "/Users/dev/Desktop/粉丝帮启屏页/2688-1242.png",
+                        "portrait-896h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/828-1792.png",
+                        "landscape-896h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/1792-828.png",
+                        "iphonex" : "/Users/dev/Desktop/粉丝帮启屏页/1125-2436.png",
+                        "iphonexl" : "/Users/dev/Desktop/粉丝帮启屏页/2436-1125.png",
+                        "retina47l" : "/Users/dev/Desktop/粉丝帮启屏页/1334-750.png",
+                        "retina40l" : "/Users/dev/Desktop/粉丝帮启屏页/1136-640.png"
                     },
                     "ipad" : {
                         "portrait" : "", /*iPad竖屏启动图片，分辨率：768x1004*/
                         "portrait-retina" : "", /*iPad高分屏竖屏图片，分辨率：1536x2008*/
                         "landscape" : "", /*iPad横屏启动图片，分辨率：1024x748*/
                         "landscape-retina" : "", /*iPad高分屏横屏启动图片，分辨率：2048x1496*/
-                        "portrait7" : "", /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
-                        "portrait-retina7" : "", /*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
-                        "landscape7" : "", /*iPad iOS7横屏启动图片，分辨率：1024x768*/
-                        "landscape-retina7" : "" /*iPad iOS7高分屏横屏启动图片，分辨率：2048x1536*/
+                        "portrait7" : "/Users/dev/Desktop/粉丝帮启屏页/768-1024.png", /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
+                        "portrait-retina7" : "/Users/dev/Desktop/粉丝帮启屏页/1536-2048.png", /*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
+                        "landscape7" : "/Users/dev/Desktop/粉丝帮启屏页/1024-768.png", /*iPad iOS7横屏启动图片，分辨率：1024x768*/
+                        "landscape-retina7" : "/Users/dev/Desktop/粉丝帮启屏页/2048-1536.png", /*iPad iOS7高分屏横屏启动图片，分辨率：2048x1536*/
+                        "portrait-1366h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/2048-2732.png",
+                        "landscape-1366h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/2732-2048.png",
+                        "portrait-1194h@2" : "/Users/dev/Desktop/粉丝帮启屏页/1668-2388.png",
+                        "landscape-1194h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/2388-1668.png",
+                        "portrait-1112h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/1668-2224.png",
+                        "landscape-1112h@2x" : "/Users/dev/Desktop/粉丝帮启屏页/2224-1668.png"
                     }
                 },
                 "android" : {
                     "mdpi" : "", /*普通屏启动图片，分辨率：240x282*/
                     "ldpi" : "", /*大屏启动图片，分辨率：320x442*/
-                    "hdpi" : "", /*高分屏启动图片，分辨率：480x762*/
-                    "xhdpi" : "", /*720P高分屏启动图片，分辨率：720x1242*/
-                    "xxhdpi" : "" /*1080P高分屏启动图片，分辨率：1080x1882*/
+                    "hdpi" : "/Users/dev/Desktop/粉丝帮启屏页/点9/480.9.png", /*高分屏启动图片，分辨率：480x762*/
+                    "xhdpi" : "/Users/dev/Desktop/粉丝帮启屏页/点9/720.9.png", /*720P高分屏启动图片，分辨率：720x1242*/
+                    "xxhdpi" : "/Users/dev/Desktop/粉丝帮启屏页/点9/1080.9.png" /*1080P高分屏启动图片，分辨率：1080x1882*/
                 }
             },
             "plugins" : {
